--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Frankie Gillis's Homepage"
+title: "Frankie Gillis"
 author: "Frankie Gillis"
-description: "This is a website." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Personal website and blog of Frankie Gillis" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
