--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,10 @@
 title: "Frankie Gillis"
 author: "Frankie Gillis"
-description: "Personal website and blog of Frankie Gillis" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
-
-# Email / Social media user names used by the minima theme:
-# All of these are optional and can be removed or commented out
+description: "Personal website"
 email: "fotg1@st-andrews.ac.uk"
 github_username: "frankiegillis"
 linkedin_username: "frankie-gillis"
 
-#########################################################################################
-######### Nothing below needs to be changed (unless you know what you're doing) #########
-#########################################################################################
 theme: "minima"
 
 rss: rss
